--- a/index.css
+++ b/index.css
@@ -1,3 +1,136 @@
-#heading {
-    color: blue;
+.header {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+
+.logo {
+    width: 200px;
+}
+
+.nav-items {
+    padding: 20px;
+}
+
+.nav-items>ul {
+    display: flex;
+    font-size: 24px;
+    padding: 20px;
+}
+
+.nav-items>ul>li {
+    padding: 20px;
+    list-style-type: none;
+}
+
+.res-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.res-card {
+    margin: 10px;
+    padding: 10px;
+    width: 250px;
+    height: 450px;
+    background-color: #f0f0f0;
+    border-radius: 10px;
+}
+
+.res-card:hover {
+    border: 1px solid black;
+    cursor: pointer;
+}
+
+.res-logo {
+    width: 100%;
+    height: 45%;
+}
+
+.footer {
+    margin: 10px;
+    background-color: black;
+    color: white;
+    display: flex;
+}
+
+.footer-content {
+    padding: 100px 150px;
+}
+
+.star-ratings {
+    color: green;
+}
+
+.filter-btn {
+    margin: 10px;
+    padding: 10px;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+}
+
+.shimmer-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shimmer-card {
+    margin: 10px;
+    height: 450px;
+    width: 250px;
+    background-color: #f0f0f0;
+    border-radius: 10px;
+}
+
+.login {
+    padding: 0px 20px;
+    background-color: black;
+    color: white;
+    border-radius: 20px;
+}
+
+.filter {
+    display: flex;
+}
+
+.search-container {
+    margin: 10px;
+}
+
+.search-btn {
+    margin: 0px 10px;
+    padding: 10px;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+}
+
+.search-box {
+    padding: 10px;
+}
+
+.menu>ul>li {
+    padding: 20px;
+    list-style-type: none;
+}
+
+.menu-heading {
+    font-weight: bold;
+    font-size: large;
+}
+
+.menu-description {
+    color: gray;
+}
+
+.link {
+    color: black;
+    text-decoration: none;
+}
+
+.user-card {
+    margin: 20px;
+    padding: 20px;
+    border: 1px solid black;
 }
